--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
   "workbench.colorCustomizations": {
-    "activityBar.activeBackground": "#d0e84d",
-    "activityBar.activeBorder": "#1693a9",
-    "activityBar.background": "#d0e84d",
-    "activityBar.foreground": "#15202b",
-    "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#1693a9",
+    "activityBar.activeBackground": "#ab307e",
+    "activityBar.activeBorder": "#25320e",
+    "activityBar.background": "#ab307e",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#25320e",
     "activityBarBadge.foreground": "#e7e7e7",
-    "statusBar.background": "#c4e220",
-    "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#9fb718",
-    "titleBar.activeBackground": "#c4e220",
-    "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#c4e22099",
-    "titleBar.inactiveForeground": "#15202b99"
+    "statusBar.background": "#832561",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#ab307e",
+    "titleBar.activeBackground": "#832561",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#83256199",
+    "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#c4e220"
+  "peacock.color": "#832561"
 }
