--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
-    "node-sass": "^5.0.0",
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "jsonwebtoken": "^8.5.1",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.2"
+    "react-scripts": "4.0.2",
+    "sass": "^1.32.8"
   },
   "scripts": {
     "start": "react-scripts start",
