--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,19 @@
 {
     "workbench.colorCustomizations": {
-      "activityBar.activeBackground": "#fadf5c",
-      "activityBar.activeBorder": "#059b81",
-      "activityBar.background": "#fadf5c",
-      "activityBar.foreground": "#15202b",
-      "activityBar.inactiveForeground": "#15202b99",
-      "activityBarBadge.background": "#059b81",
+      "activityBar.activeBackground": "#2c837b",
+      "activityBar.activeBorder": "#702877",
+      "activityBar.background": "#2c837b",
+      "activityBar.foreground": "#e7e7e7",
+      "activityBar.inactiveForeground": "#e7e7e799",
+      "activityBarBadge.background": "#702877",
       "activityBarBadge.foreground": "#e7e7e7",
-      "statusBar.background": "#f9d52a",
-      "statusBar.foreground": "#15202b",
-      "statusBarItem.hoverBackground": "#e9c207",
-      "titleBar.activeBackground": "#f9d52a",
-      "titleBar.activeForeground": "#15202b",
-      "titleBar.inactiveBackground": "#f9d52a99",
-      "titleBar.inactiveForeground": "#15202b99"
+      "statusBar.background": "#1f5d57",
+      "statusBar.foreground": "#e7e7e7",
+      "statusBarItem.hoverBackground": "#2c837b",
+      "titleBar.activeBackground": "#1f5d57",
+      "titleBar.activeForeground": "#e7e7e7",
+      "titleBar.inactiveBackground": "#1f5d5799",
+      "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#f9d52a"
+    "peacock.color": "#1f5d57"
 }
