--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "framer-motion": "^3.9.0",
     "jsonwebtoken": "^8.5.1",
+    "konva": "^7.2.5",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -21,7 +22,8 @@
     "react-konva": "^17.0.1-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "use-image": "^1.0.7"
   },
   "scripts": {
     "start": "react-scripts start",
