--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-circular-menu": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-konva": "^17.0.1-3",
