--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "framer-motion": "^3.9.0",
+    "image-data-uri": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "konva": "^7.2.5",
     "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-circular-menu": "^1.0.2",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-konva": "^17.0.1-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "sass": "^1.32.8",
-    "use-image": "^1.0.7"
+    "use-image": "^1.0.7",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
