--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-konva": "^17.0.1-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-spring": "^8.0.27",
     "sass": "^1.32.8",
     "use-image": "^1.0.7",
     "uuid": "^8.3.2"
