--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
+    "react-hotkeys-hook": "^3.2.1",
     "react-konva": "^17.0.1-3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
