--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-FONT_AWESOME_AUTH_TOKEN: 8B9A5444-EE84-465D-B308-6F73CF1C667B
+FONT_AWESOME_AUTH_TOKEN = 8B9A5444-EE84-465D-B308-6F73CF1C667B
+
+#URL_PREFIX = "https://quiet-caverns-20153.herokuapp.com"
+
+#URL_PREFIX = "http://localhost:3030"
