fixed tile controls, tiles cannot be dropped outside grid, undefined check in contrastColor, db map save/update fixed

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 @fortawesome:registry=https://npm.fontawesome.com/
-//npm.fontawesome.com/:_authToken=${FONT_AWESOME_AUTH_TOKEN}
+//npm.fontawesome.com/:_authToken=8B9A5444-EE84-465D-B308-6F73CF1C667B
